# AIOCR

./: .gitignore  AIOCR.md  AIOCRRE.md  README.md  pyproject.toml  requirements.txt  run.bat
src/app/: 0_Template_Editor.py  1_Main_OCR.py  main.py  ocr_bridge.py  ocr_processor.py
src/app/core/: config.py
src/app/pages/: 1_Review.py  2_Dashboard.py
src/core/: dashboard_utils.py  db_manager.py  ocr_agent.py  ocr_bridge.py  ocr_processor.py  postprocess.py  preprocess.py  template_manager.py
templates/: invoice.json
tests/: test_dashboard_utils.py  test_db_manager.py  test_ocr_agent.py  test_ocr_bridge.py  test_ocr_processor.py  test_postprocess.py  test_preprocess.py  test_review_updates.py  test_roi_alignment.py  test_template_manager.py
workspace/templates/: invoice.yaml
